--- a/authlib/deno.json
+++ b/authlib/deno.json
@@ -1,8 +1,9 @@
 {
   "tasks": {
-    "dev": "deno run --watch --allow-read --allow-env main.ts"
+    "dev": "deno run --watch --allow-read --allow-env --allow-sys main.ts"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "@std/assert": "jsr:@std/assert@1",
+    "mongoose": "npm:mongoose@^8.8.1"
   }
 }
