--- a/authlib/deno.json
+++ b/authlib/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "dev": "deno run --watch --allow-read --allow-env --allow-sys main.ts"
+    "dev": "deno run --watch --allow-read --allow-env --allow-sys --allow-net main.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
